Revision history for HTTP-Message

{{$NEXT}}

6.11   2015-09-09
    - fix an undefined value warning in HTTP::Headers::as_string

6.10   2015-07-19
    - fix uses of qr/.../m in tests that do not work in 5.8.x

6.09   2015-07-19
    - converted all uses of Test.pm to Test::More
    - fix uninitialized warning in HTTP::Config (RT#105929)

6.08   2015-07-10
    - Resolve new uninitialized warning from
      HTTP::Request::Common::request_type_with_data (RT#105787)

6.07   2015-07-09
    - Allow subclasses to override the class of parts - it used to be hardcoded
      to HTTP::Message. (Gisle Aas, RT#79239)
    - Added support for is_client_error, is_server_error to HTTP::Response
      (Karen Etheridge)
    - Added flatten interface to HTTP::Headers (Tokuhiro Matsuno, GH#5)
    - Allow PUT to pass content data via hashrefs just like with POST (Michael
      Schilli, GH#9)
    - Fix for "Content-Encoding: none" header (Gisle Aas, RT#94882)
    - Add support for HTTP status 308, defined in RFC 7238 (Olivier Mengué,
      RT#104102)
    - drop the use of "use vars" (Karen Etheridge)

6.06    2012-10-21
    - More forgiving test on croak message [RT#80302] (Gisle Aas)
    - Added test for multipart parsing (Gisle Aas)
    - Multipart end boundary doesn't need match a complete line [RT#79239]
      (Mark Overmeer)

6.05    2012-10-20
    - Updated ignores (Gisle Aas)
    - No need to prevent visiting field values starting with '_' (Gisle Aas)
    - Report the correct croak caller for delegated methods (Gisle Aas)
    - Disallow empty field names or field names containing ':' (Gisle Aas)
    - Make the extra std_case entries local to each header (Gisle Aas)

6.04    2012-09-30
    - Updated repository URL (Gisle Aas)
    - Avoid undef warning for empty content (Gisle Aas)
    - Teach $m->content_charset about JSON (Gisle Aas)
    - Use the canonical charset name for UTF-16LE (and frieds) (Gisle Aas)