@@ -5,7 +5,8 @@ use strict;
 use warnings;
 
 use Test::More;
-plan tests => 11;
+use Test::Fatal qw( dies_ok lives_ok );
+plan tests => 15;
 
 use HTTP::Request;
 
@@ -31,3 +32,41 @@ is($r2->method, "DELETE");
 is($r2->uri, "http:");
 is($r2->protocol, "HTTP/1.1");
 is($r2->header("Accept-Encoding"), $req->header("Accept-Encoding"));
+
+# Test objects which are accepted as URI-like
+{
+    package Foo::URI;
+
+    use strict;
+    use warnings;
+
+    sub new { return bless {}, shift; }
+    sub clone  { return shift }
+    sub scheme { }
+
+    1;
+
+    package Foo::URI::WithCanonical;
+
+    sub new { return bless {}, shift; }
+    sub clone     { return shift }
+    sub scheme    { }
+    sub canonical { }
+
+    1;
+
+    package main;
+
+    ok( Foo::URI->new->can( 'scheme' ), 'Object can scheme()' );
+    dies_ok(
+        sub { HTTP::Request->new( GET => Foo::URI->new ) },
+        'Object without canonical method triggers an exception'
+    );
+
+    ok( Foo::URI::WithCanonical->new->can( 'canonical' ),
+        'Object can canonical()' );
+    lives_ok(
+        sub { HTTP::Request->new( GET => Foo::URI::WithCanonical->new ) },
+        'Object with canonical method does not trigger an exception'
+    );
+}
